Fixing home layout and trilling whitespaces

--- a/euvim/src/app/main/home/home.component.scss
+++ b/euvim/src/app/main/home/home.component.scss
@@ -2,3 +2,8 @@
     margin: 0px;
     padding: 0px;
 }
+
+.mat-card-header {
+  display: flow-root;
+  flex-direction: row;
+}
